@@ -81,6 +81,7 @@
         
         <curator.version>2.10.0</curator.version>
         <opentracing.version>0.30.0</opentracing.version>
+        <apollo.client.version>1.5.0</apollo.client.version>
         
         <lombok.version>1.16.20</lombok.version>
         
@@ -132,7 +133,7 @@
         
         <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
         <maven.deploy.skip>false</maven.deploy.skip>
-        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        <argLine>-Xmx1024m -XX:MaxMetaspaceSize=256m</argLine>
     </properties>
     
     <dependencyManagement>
